--- a/notebooks/Confidential_intervals.ipynb
+++ b/notebooks/Confidential_intervals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -1952,7 +1952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 59,
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -1963,18 +1963,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21609.0\n"
+      "96.0\n"
      ]
     }
    ],
    "source": [
     "### Code\n",
-    "\n",
-    "def get_data_size(accuracy_mean, dispersion, confidential_level):\n",
+    "# Задание № 1. Где-то ошибка. Посмотрите пример расчета из лекции. Ожидаемый ответ меньше 100.\n",
+    "def get_data_size(accuracy_mean, sigma, confidential_level):\n",
     "    standard_normal_cumulative_distribution = round(norm.ppf(( confidential_level + 1 ) / 2), 2)\n",
-    "    return round(pow((( dispersion * standard_normal_cumulative_distribution ) / accuracy_mean ), 2), 0)\n",
+    "    return round(pow((( sigma * standard_normal_cumulative_distribution ) / accuracy_mean ), 2), 0)\n",
     "\n",
-    "print(get_data_size(3, 225, 0.95))"
+    "print(get_data_size(3, np.sqrt(225), 0.95))"
    ]
   },
   {
@@ -2231,6 +2231,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Задание № 4. Оценки верные, но хотелось бы конечно более полный комментарий для полученного p-value.\n",
+    "# Ответ: p-value больше 5%, это означает, что \n",
+    "# вероятность ошибочного заключения о существовании различий между \n",
+    "# предсказаниями волшебника и реальной погоды превышает 5%. Другими словами, волшебник иногда угадывает погоду."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -2302,6 +2318,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "data_1 = [4,5,8,9,6,7,5,6,7,8,5,6,7,0,9,8,4,6,7,9,8,6,5,7,8,9,6,7,5,8,6,7,9,5,10]\n",
+    "data_2 = [8,5,6,7,0,1,8,4,6,7,0,2,6,5,7,5,3,5,3,5,3,5,5,8,7,6,4,5,3,5,4,6,4,5,3,2,6,4,2,6,1,0,4,3,5,4,3,4,5,4,3,4,5,4,3,4,5,3,4,4,1,2,4,3,1,2,4,3,2,1,5,3,4,6,4,5,3,2,4,5,6,4,3,1,3,5,3,4,4,4,2,5,3]\n",
+    "\n",
+    "# Code\n",
+    "t , p  = stats.ttest_ind(data_1, data_2)\n",
+    "print(t , p)\n",
+    "t, p = stats.ttest_1samp(a=data_1,popmean=statistics.mean(data_2))\n",
+    "print(t , p)\n",
+    "\n",
+    "pd.DataFrame(data_1).hist()\n",
+    "pd.DataFrame(data_2).hist()\n",
+    "pd.DataFrame(np.concatenate((data_1, data_2))).hist()\n",
+    "\n",
+    "# Вывод: выборки не пренадлежат одному множеству, т.к. p-value меньше 0.05"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 150,
    "metadata": {
     "pycharm": {
@@ -2366,20 +2409,15 @@
     }
    ],
    "source": [
-    "data_1 = [4,5,8,9,6,7,5,6,7,8,5,6,7,0,9,8,4,6,7,9,8,6,5,7,8,9,6,7,5,8,6,7,9,5,10]\n",
-    "data_2 = [8,5,6,7,0,1,8,4,6,7,0,2,6,5,7,5,3,5,3,5,3,5,5,8,7,6,4,5,3,5,4,6,4,5,3,2,6,4,2,6,1,0,4,3,5,4,3,4,5,4,3,4,5,4,3,4,5,3,4,4,1,2,4,3,1,2,4,3,2,1,5,3,4,6,4,5,3,2,4,5,6,4,3,1,3,5,3,4,4,4,2,5,3]\n",
+    "7. На примере датасета про жилье в New York City, мы сталкивались с примером, когда переменная имеет не совсем нормальное распределение. \n",
     "\n",
-    "# Code\n",
-    "t , p  = stats.ttest_ind(data_1, data_2)\n",
-    "print(t , p)\n",
-    "t, p = stats.ttest_1samp(a=data_1,popmean=statistics.mean(data_2))\n",
-    "print(t , p)\n",
+    "Предположим, Вы сформировали две гипотезы:\n",
+    "Нулевая гипотеза - распределение нормальное, \n",
+    "Альтернативная гипотеза - распределение не нормальное.\n",
     "\n",
-    "pd.DataFrame(data_1).hist()\n",
-    "pd.DataFrame(data_2).hist()\n",
-    "pd.DataFrame(np.concatenate((data_1, data_2))).hist()\n",
     "\n",
-    "# Вывод: выборки пренадлежат одному множеству"
+    "Допустим, вы применили какой-то тест (сейчас неважно какой), который показал уровень значимости (p-value) = 0.03.\n",
+    "Каковы будут ваши выводы? Будем считать что у нас нормальное распределение или все-таки нет? Вопрос без подвоха)"
    ]
   },
   {
@@ -2524,7 +2562,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
